--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';">
+    <meta http-equiv="Content-Security-Policy" content="frame-ancestors 'none';X-Frame-Options: DENY">
     <title>Trang Web Đơn Giản</title>
     <style>
         body {
